fix: fix overflow on mobile

--- a/src/utils/owl_carousel.css
+++ b/src/utils/owl_carousel.css
@@ -14,5 +14,5 @@
 .owl-carousel button.owl-dot {
   background-color: white;
   color: white;
-  margin: 0 12px;
+  margin: 24px 12px;
 }
